<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/action_filter"
    android:title="@string/menu_filter"
    app:showAsAction="always"
    app:actionLayout="@layout/toolbar_chip_filter" />
  <item
    android:id="@+id/action_select_all"
    android:title="@string/menu_select_all"
    app:showAsAction="always"
    app:actionLayout="@layout/toolbar_chip_select_all" />
  <item
    android:id="@+id/action_clear_selection"
    android:title="@string/menu_clear_selection"
    app:showAsAction="always"
    app:actionLayout="@layout/toolbar_chip_clear_selection" />
  <item
    android:id="@+id/action_delete_selected"
    android:title="@string/menu_delete_selected"
    app:showAsAction="always" />
</menu>
