<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="12dp">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/label_vendor"
      android:textStyle="bold"
      android:textColor="?attr/colorOnSurface"
      android:paddingTop="4dp"
      android:paddingBottom="6dp"/>

    <com.google.android.material.chip.ChipGroup
      android:id="@+id/cgVendors"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:singleSelection="false"
      app:selectionRequired="false"
      app:singleLine="false" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/label_source"
      android:textStyle="bold"
      android:textColor="?attr/colorOnSurface"
      android:paddingTop="12dp"
      android:paddingBottom="6dp"/>

    <com.google.android.material.chip.ChipGroup
      android:id="@+id/cgSources"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:singleSelection="true"
      app:selectionRequired="false"
      app:singleLine="false" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/label_time"
      android:textStyle="bold"
      android:textColor="?attr/colorOnSurface"
      android:paddingTop="12dp"
      android:paddingBottom="6dp"/>

    <com.google.android.material.chip.ChipGroup
      android:id="@+id/cgTime"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:singleSelection="true"
      app:selectionRequired="false"
      app:singleLine="false" />

  </LinearLayout>

</ScrollView>
